--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run lint",
-    "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
@@ -34,6 +32,8 @@
   "homepage": "https://github.com/zkPassOfficial/Transgate-JS-SDK/issues#readme",
   "devDependencies": {
     "@types/node": "^20.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "prettier": "^3.1.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
