--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "transgate-js-sdk",
-  "version": "0.4.0",
+  "name": "@zkPass/transgate-js-sdk",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
