change content text

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zkPass/transgate-js-sdk",
+  "name": "@zkpass/transgate-js-sdk",
   "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
